subprojects {
    apply plugin: 'java-library'

    group = 'dev.toktokhan.invalidation'
    version = '0.1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    // 툴체인 대신 release 를 씁니다.
    // Spring Boot 4 의 기준선이 Java 17 이고, Java 17 바이트코드는 JVM 17 과 21 에서 모두 돕니다.
    // 이 장비의 기본 JVM 은 JDK 21 이므로 툴체인으로 17 을 요구하면 JDK 17 설치가 필요해집니다.
    // release = 17 이면 JDK 21 이 Java 17 바이트코드(클래스 파일 버전 61)를 만들고,
    // Java 18 이상에서 추가된 API 를 실수로 쓰면 컴파일 단계에서 걸립니다.
    tasks.withType(JavaCompile).configureEach {
        options.release = 17
        options.encoding = 'UTF-8'
    }

    dependencies {
        testImplementation platform('org.junit:junit-bom:5.10.3')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testImplementation 'org.assertj:assertj-core:3.26.3'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.named('test') {
        useJUnitPlatform()
        testLogging {
            events 'failed'
            exceptionFormat 'full'
        }
    }
}
